--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             src="./images/vashsa_polka_verhniaa.jpg"
             alt="Изображение купе"
           />
-          <p class="lead__caption">ваша полка — верхняя</p>
+          <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
         </div>
       </section>
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не&#160;видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
@@ -41,11 +41,13 @@
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <p class="intro__list">
-          Часовых поясов 11<br />
-          Объектов природного наследия ЮНЕСКО 12<br />
-          Объектов культурного наследия ЮНЕСКО 16<br />
-          Природных заповедников 105<br />
-          Аэропортов 241
+          Часовых поясов <span class="intro__list intro__list-width-normal">11</span><br />
+          Объектов природного наследия ЮНЕСКО
+          <span class="intro__list intro__list-width-normal">12</span><br />
+          Объектов культурного наследия ЮНЕСКО
+          <span class="intro__list intro__list-width-normal">16</span><br />
+          Природных заповедников <span class="intro__list intro__list-width-normal">105</span><br />
+          Аэропортов <span class="intro__list intro__list-width-normal">241</span>
         </p>
       </section>
       <section class="photo">
@@ -73,16 +75,14 @@
           <div class="columns__right-column">
             <div class="columns__website">
               <p class="columns__url-heading">URL</p>
-              <a class="columns__link" href="http://park-kosa.ru" target="_blank"
-                >http://park-kosa.ru</a
-              >
+              <a class="columns__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </div>
             <p class="columns__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря
               с другой. Уникальная природная зона на краю российского анклава.
             </p>
-            <p class="columns__paragraph">
+            <p class="columns__paragraph columns__paragraph_space-less">
               На этом Калининградская область не заканчивается. Для путешественника и исследователя
               там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
               наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
@@ -107,7 +107,7 @@
               Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг
               — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
-            <p class="columns__paragraph">
+            <p class="columns__paragraph columns__paragraph_space-less">
               Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
               Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
               уроках географии. Возможно, вы не интересовались пронизывающей земную кору
@@ -135,7 +135,7 @@
               откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
             </p>
-            <p class="columns__paragraph">
+            <p class="columns__paragraph columns__paragraph_space-less">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
               разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
               орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
@@ -155,14 +155,17 @@
               >
             </div>
             <p class="columns__paragraph">
-              Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
-              большой источник пресной воды и одно из красивейших мест в России.
+              Всем известен Байкал как крупнейшее озеро <br />
+              в мире. Многие также знают, что это самый большой <br />
+              источник пресной воды и одно из красивейших мест <br />
+              в России.
             </p>
-            <p class="columns__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
-              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается
-              развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+            <p class="columns__paragraph columns__paragraph_space-less">
+              Конечно, это всё так. Но Байкал ещё идеальное <br />
+              место для соревнований по скийорингу. Это такой <br />
+              вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как
+              можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был
+              поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
 
@@ -181,23 +184,33 @@
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
               не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
               национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
-              раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не
+              уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему <br />
+              солнце раньше, чем увидал его Иван Грозный.<br />
+              В девственном лесу на сотню километров не <br />
               встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены
-              медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              медвежьими <br />
+              когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
         </div>
       </section>
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"
-          ><img
+        <a
+          class="cover__image"
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="_blank"
+        >
+          <img
             class="cover__image"
             src="./images/do_baikala_na_sobackah.jpg"
             alt="До байкала на собаках"
-        /></a>
+          />
+        </a>
         <div class="cover__text">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">
+            До Байкала<br />
+            «на собаках»
+          </h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
@@ -211,7 +224,7 @@
           <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
           <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
         </nav>
-        <p class="footer__author">&copy;2023 Дмитрий Романов</p>
+        <p class="footer__author">&copy;2023&#160;&#160;&#160;Дмитрий Романов</p>
       </section>
     </main>
   </body>
