--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <p class="intro__list">
-          Часовых поясов <span class="intro__list intro__list-width-normal">11</span><br />
+          Часовых поясов <span class="intro__span-accent">11</span><br />
           Объектов природного наследия ЮНЕСКО
-          <span class="intro__list intro__list-width-normal">12</span><br />
+          <span class="intro__span-accent">12</span><br />
           Объектов культурного наследия ЮНЕСКО
-          <span class="intro__list intro__list-width-normal">16</span><br />
-          Природных заповедников <span class="intro__list intro__list-width-normal">105</span><br />
-          Аэропортов <span class="intro__list intro__list-width-normal">241</span>
+          <span class="intro__span-accent">16</span><br />
+          Природных заповедников <span class="intro__span-accent">105</span><br />
+          Аэропортов <span class="intro__span-accent">241</span>
         </p>
       </section>
       <section class="photo">
@@ -83,7 +83,7 @@
               Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского
               анклава.
             </p>
-            <p class="columns__paragraph columns__paragraph_space-less">
+            <p class="columns__paragraph columns__paragraph_space_less">
               На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
               исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
               Балтийская коса,&nbsp;&mdash; и немецкое наследие россыпи небольших приморских
@@ -92,8 +92,8 @@
             </p>
           </div>
 
-          <h3 class="columns__title columns__title_position-lower">Кольский</h3>
-          <div class="columns__website columns__website_position-lower">
+          <h3 class="columns__title columns__title_position_lower">Кольский</h3>
+          <div class="columns__website columns__website_position_lower">
             <p class="columns__url-heading">URL</p>
             <a
               class="columns__link"
@@ -111,7 +111,7 @@
               от&nbsp;которой на&nbsp;юг &mdash;&nbsp;тайга, а&nbsp;на&nbsp;север&nbsp;&mdash;
               Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
-            <p class="columns__paragraph columns__paragraph_space-less">
+            <p class="columns__paragraph columns__paragraph_space_less">
               Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
               фестиваля в Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под
               снегом школьных воспоминаний об уроках географии. Возможно,
@@ -121,8 +121,8 @@
             </p>
           </div>
 
-          <h3 class="columns__title columns__title_position-lower">Алтай</h3>
-          <div class="columns__website columns__website_position-lower">
+          <h3 class="columns__title columns__title_position_lower">Алтай</h3>
+          <div class="columns__website columns__website_position_lower">
             <p class="columns__url-heading">URL</p>
             <a
               class="columns__link"
@@ -141,7 +141,7 @@
               реки и&nbsp;озёра. А&nbsp;если вы откроете в&nbsp;автомобиле окна, сможете
               познакомиться с&nbsp;невидимым чудом здешних мест &mdash; горным воздухом.
             </p>
-            <p class="columns__paragraph columns__paragraph_space-less">
+            <p class="columns__paragraph columns__paragraph_space_less">
               Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
               вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая
               бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули.
@@ -149,7 +149,7 @@
             </p>
           </div>
 
-          <h3 class="columns__title columns__title_position-lower columns__title_name-baikal">
+          <h3 class="columns__title columns__title_position_lower columns__title_name_baikal">
             Зимний Байкал
           </h3>
           <div class="columns__website">
@@ -167,7 +167,7 @@
               самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест
               в&nbsp;России.
             </p>
-            <p class="columns__paragraph columns__paragraph_space-less">
+            <p class="columns__paragraph columns__paragraph_space_less">
               Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
               по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя
               к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость
@@ -176,8 +176,8 @@
             </p>
           </div>
 
-          <h3 class="columns__title columns__title_position-lower">Карелия</h3>
-          <div class="columns__website columns__website_position-lower">
+          <h3 class="columns__title columns__title_position_lower">Карелия</h3>
+          <div class="columns__website columns__website_position_lower">
             <p class="columns__url-heading">URL</p>
             <a class="columns__link" href="http://vodlozero.ru/" target="_blank"
               >http://vodlozero.ru/</a
@@ -202,7 +202,7 @@
       </section>
       <section class="cover">
         <a
-          class="cover__image"
+          class="cover__link"
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="_blank"
         >
@@ -212,7 +212,11 @@
             alt="До байкала на собаках"
           />
         </a>
-        <div class="cover__text">
+        <a
+          class="cover__text"
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="_blank"
+        >
           <h2 class="cover__title">
             До Байкала<br />
             «на собаках»
@@ -220,7 +224,7 @@
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
-        </div>
+        </a>
       </section>
       <section class="footer">
         <nav class="footer__links">
