--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <p class="intro__list">
-          Часовых поясов <span class="intro__span-accent">11</span><br />
+          Часовых поясов <span class="intro__span-accent">11</span>
           Объектов природного наследия ЮНЕСКО
           <span class="intro__span-accent">12</span><br />
           Объектов культурного наследия ЮНЕСКО
