Исправлены ошибки <br>

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <p class="intro__list">
-          Часовых поясов <span class="intro__span-accent">11</span>
-          Объектов природного наследия ЮНЕСКО
-          <span class="intro__span-accent">12</span><br />
-          Объектов культурного наследия ЮНЕСКО
-          <span class="intro__span-accent">16</span><br />
-          Природных заповедников <span class="intro__span-accent">105</span><br />
-          Аэропортов <span class="intro__span-accent">241</span>
+          Часовых&nbsp;поясов&nbsp;<span class="intro__span-accent">&nbsp;11</span>
+          Объектов&nbsp;природного&nbsp;наследия&nbsp;ЮНЕСКО&nbsp;<span class="intro__span-accent"
+            >&nbsp;12</span
+          >
+          Объектов&nbsp;культурного&nbsp;наследия&nbsp;ЮНЕСКО&nbsp;<span class="intro__span-accent"
+            >&nbsp;16</span
+          >
+          Природных&nbsp;заповедников&nbsp;<span class="intro__span-accent">&nbsp;105</span>
+          Аэропортов&nbsp;<span class="intro__span-accent">&nbsp;241</span>
         </p>
       </section>
       <section class="photo">
