--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
         <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
       </nav>
-      <p class="footer__author">&copy;2023&#160;&#160;&#160;Дмитрий Романов</p>
+      <p class="footer__author">&copy;2023&#160;&#160;&#160;Dmitrii Romanov</p>
     </footer>
   </body>
 </html>
